[gd_scene load_steps=20 format=3 uid="uid://dwnnse5ioycao"]

[ext_resource type="Texture2D" uid="uid://cekc60unt8d85" path="res://assets/enemy1.png" id="1_e4gvj"]
[ext_resource type="Script" path="res://enemy_1.gd" id="1_f261c"]
[ext_resource type="PackedScene" uid="uid://bqrutnhiak7b0" path="res://hurt_box.tscn" id="3_eo2lc"]
[ext_resource type="PackedScene" uid="uid://bk3mganrtyr4x" path="res://stats.tscn" id="4_dbcub"]
[ext_resource type="PackedScene" uid="uid://dkx6xs8gb1roc" path="res://hit_box.tscn" id="5_vmjuo"]
[ext_resource type="AudioStream" uid="uid://dcrlhnxqhwrdk" path="res://sounds/Hit_Hurt11.wav" id="6_lsu1d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v1m32"]
radius = 4.12311

[sub_resource type="CircleShape2D" id="CircleShape2D_sor5m"]
radius = 203.002

[sub_resource type="Animation" id="Animation_i51gg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_uxrup"]
resource_name = "create"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [true],
"method": &"set_creating"
}]
}

[sub_resource type="Animation" id="Animation_pipd0"]
resource_name = "dead"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_wlivj"]
resource_name = "attack_down"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.4, 0.6, 0.8, 1.1, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"set_is_attacking"
}]
}

[sub_resource type="Animation" id="Animation_ikhgu"]
resource_name = "attack_up"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.5, 0.7, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"set_is_attacking"
}]
}

[sub_resource type="Animation" id="Animation_nb4vu"]
resource_name = "walk_down"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [19, 20]
}

[sub_resource type="Animation" id="Animation_yhc56"]
resource_name = "walk_up"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [21, 22]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_33ny2"]
_data = {
"RESET": SubResource("Animation_i51gg"),
"attack_down": SubResource("Animation_wlivj"),
"attack_up": SubResource("Animation_ikhgu"),
"create": SubResource("Animation_uxrup"),
"dead": SubResource("Animation_pipd0"),
"walk_down": SubResource("Animation_nb4vu"),
"walk_up": SubResource("Animation_yhc56")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cpk3n"]
size = Vector2(5.5, 8.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4rgrp"]
radius = 4.0
height = 38.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kd0dc"]
radius = 4.0
height = 22.0

[node name="Enemy1" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 7
motion_mode = 1
script = ExtResource("1_f261c")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_e4gvj")
hframes = 23

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color(0.70227, 0.585039, 0.114613, 1)
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_v1m32")

[node name="DetectionZone" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource("CircleShape2D_sor5m")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_33ny2")
}

[node name="HurtBox" parent="." instance=ExtResource("3_eo2lc")]
visible = false
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(-1, -1)
shape = SubResource("RectangleShape2D_cpk3n")

[node name="Stats" parent="." instance=ExtResource("4_dbcub")]
max_health = 3

[node name="AttackZone" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackZone"]
modulate = Color(0.662745, 0.0941176, 0.364706, 1)
position = Vector2(-1, 10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_4rgrp")
one_way_collision_margin = 0.0

[node name="HitBox" parent="." instance=ExtResource("5_vmjuo")]
collision_layer = 8
collision_mask = 64

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(-1, 10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_kd0dc")
disabled = true

[node name="Attack_cooldown" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_lsu1d")

[connection signal="player_moved" from="." to="." method="_on_player_moved"]
[connection signal="body_entered" from="DetectionZone" to="." method="_on_detection_zone_body_entered"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]
[connection signal="body_entered" from="AttackZone" to="." method="_on_attack_zone_body_entered"]
[connection signal="timeout" from="Attack_cooldown" to="." method="_on_attack_cooldown_timeout"]

[editable path="HurtBox"]
[editable path="HitBox"]
